[gd_scene load_steps=5 format=2]

[ext_resource path="res://scn/workpiece/Poligon NOT done.png" type="Texture" id=1]
[ext_resource path="res://scn/workpiece/poligon.gd" type="Script" id=2]
[ext_resource path="res://scn/workpiece/Poligon done.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 22.0227

[node name="poligon" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=["NotFixed"]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="PoligonNotDone" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PoligonDone" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
